--- a/about.html
+++ b/about.html
@@ -18,10 +18,22 @@
       </nav> 
     </header> 
     <div id="aboutMe">
-    <p> 
-        Hi! My name is Bailey Ilagan. I am currently a junior pursing a B.S. in Computer Science at 
-        Seattle University. 
-    </p>
+        <h3>Hi There!</h3>
+        <h4>Who am I?<h4> 
+        <p> 
+            Hi! My name is Bailey. I am currently a junior pursing a B.S. in Computer Science at 
+            Seattle University. 
+        </p>
+        <h4>What do I do?</h4>
+        <p>
+            As mentioned earlier, I am currently pursuing a degree in Computer Science and striving
+            towards a career in software development. 
+        </p> 
+        <h4>Why do I do what I do?</h4> 
+        <p>
+            I have always acknowledged the necessary role that technology plays in society, especially
+            in modern society.
+        </p>
     </div>
   </body>
 </html> 
