--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
       <h1>Bailey Ilagan</h1>
       <h2>Aspiring Software Developer</h2> 
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="animations/home.js"></script>
   </body>
 </html> 
