--- a/about.html
+++ b/about.html
@@ -10,30 +10,35 @@
       <nav> 
         <ul> 
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="">Projects</a></li> 
-          <li><a href="">Skills</a></li>
-          <li><a href="">Contact</a></li> 
+           <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li> 
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="contact.html">Contact</a></li> 
         </ul>   
       </nav> 
     </header> 
     <div id="aboutMe">
-        <h3>Hi There!</h3>
-        <h4>Who am I?<h4> 
-        <p> 
-            Hi! My name is Bailey. I am currently a junior pursing a B.S. in Computer Science at 
-            Seattle University. 
-        </p>
-        <h4>What do I do?</h4>
-        <p>
-            As mentioned earlier, I am currently pursuing a degree in Computer Science and striving
-            towards a career in software development. 
-        </p> 
-        <h4>Why do I do what I do?</h4> 
-        <p>
-            I have always acknowledged the necessary role that technology plays in society, especially
-            in modern society.
+            <h3>Hi There!</h3>
+            <h4>Who am I?<h4> 
+            <p> 
+                Hi! My name is Bailey and I am currently a junior at Seattle University. I was born on the
+                beautiful island of Oahu, Hawaii where I grew up most of my life, but I have also lived in the 
+                Bay Area and Maui for a bit. 
+            </p>
+            <h4>What do I do?</h4>
+            <p>
+                As mentioned earlier, I am currently pursuing a degree in Computer Science and striving
+                towards a career in software development. 
+            </p> 
+            <h4>Why do I do what I do?</h4> 
+            <p>
+                I have always acknowledged the necessary role that technology plays in society, especially
+                in modern society.
         </p>
     </div>
+    <footer>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="animations/about.js"></script>
+    </footer>
   </body>
 </html> 
