--- a/Personal Website/index.html
+++ b/Personal Website/index.html
@@ -7,18 +7,20 @@
   </head>
   <body> 
     <header> 
-      <nav> 
-        <ul> 
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li> 
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="contact.html">Contact</a></li> 
-        </ul>   
-      </nav> 
+      <div id="navbar"> 
+        <div id="nav"> 
+          <ul> 
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li> 
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="contact.html">Contact</a></li> 
+          </ul>   
+        </div>
+      </div> 
     </header> 
     <div id="name">
-       <img src="images/face.jpeg" alt="face">
+      <img src="images/face.jpeg" alt="face">
       <h1>Bailey Ilagan</h1>
       <h2>Aspiring Software Developer</h2> 
     </div>
