--- a/Personal Website/about.html
+++ b/Personal Website/about.html
@@ -7,37 +7,41 @@
   </head>
   <body> 
     <header> 
-      <nav> 
-        <ul> 
-          <li><a href="index.html">Home</a></li>
-           <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li> 
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="contact.html">Contact</a></li> 
-        </ul>   
-      </nav> 
+       <div id="navbar"> 
+        <div id="nav"> 
+          <ul> 
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li> 
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="contact.html">Contact</a></li> 
+          </ul>   
+        </div>
+      </div> 
     </header> 
     <div id="aboutMe">
-            <h3>Hi There!</h3>
-            <h4>Who?<h4> 
-            <p> 
-                Hi! My name is Bailey and I am currently a junior at Seattle University. I was born on the
-                beautiful island of Oahu, Hawaii where I grew up most of my life, but I have also lived in the 
-                Bay Area. My hobbies include sports, photography, video making, listening to music, 
-                and I love learning new things. 
-            </p>
-            <h4>What?</h4>
-            <p>
-                As mentioned earlier, I am currently pursuing a degree in Computer Science and striving
-                towards a career in software development. 
-            </p> 
-            <h4>Why?</h4> 
-            <p>
-                I think that living in the Bay Area for a part of my life sort of acclimated me to a more 
-                fast-paced and technology-driven environment than I was used to in Hawaii, which started 
-                my interest in technology. As I got older, my interests started to focus more on computers 
-                and how they work. 
-        </p>
+      <div>
+          <h3>Hi There!</h3>
+          <h4>Who?<h4> 
+          <p> 
+              Hi! My name is Bailey and I am currently a junior at Seattle University. I was born on the
+              beautiful island of Oahu, Hawaii where I grew up most of my life, but I have also lived in the 
+              Bay Area. My hobbies include sports, photography, video making, listening to music, 
+              and I love learning new things. 
+          </p>
+          <h4>What?</h4>
+          <p>
+              As mentioned earlier, I am currently pursuing a degree in Computer Science and striving
+              towards a career in software development. 
+          </p> 
+          <h4>Why?</h4> 
+          <p>
+              I think that living in the Bay Area for a part of my life sort of acclimated me to a more 
+              fast-paced and technology-driven environment than I was used to in Hawaii, which started 
+              my interest in technology. As I got older, my interests started to focus more on computers 
+              and how they work. 
+          </p>
+      </div>
     </div>
     <footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
