--- a/Personal Website/contact.html
+++ b/Personal Website/contact.html
@@ -7,15 +7,17 @@
   </head>
   <body> 
     <header> 
-      <nav> 
-        <ul> 
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li> 
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="contact.html">Contact</a></li> 
-        </ul>   
-      </nav> 
+       <div id="navbar"> 
+        <div id="nav"> 
+          <ul> 
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li> 
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="contact.html">Contact</a></li> 
+          </ul>   
+        </div>
+      </div> 
     </header> 
     <div id="contactInfo"> 
       <h1>Contact Me!</h1> 
